# python-project-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HACKING.md  README.md  lxm3_launcher.py  pyproject.toml
.github/workflows/: test.yml
project_name/: main.py
